feat: Complete JCL parser with 100% extraction success and project cleanup
This commit represents a major milestone for the tree-sitter JCL parser:

## Parser Enhancements
- Added PROC/PEND support for procedure definitions
- Implemented GDG dataset parsing (0% → 100% success)
- Added referback dataset support (*.stepname.ddname)
- Added dataset member support (dataset(member))
- Fixed symbolic parameter handling for SET statements
- Enhanced continuation line parsing

## Core Extraction Tool
- Created jcl_extractor.py for production-ready data extraction
- Extracts job names, programs, and datasets with 100% success rate
- Supports JSON and CSV output formats
- Includes dependency analysis and reporting

## Utility Scripts
- parse_examples.sh: Parse all JCL files to ASTs
- extract_jcl_data.sh: Quick command-line extraction
- analyze_ast_output.sh: Analyze parsing results
- deep_cleanup.sh: Project maintenance

## Documentation
- USAGE_GUIDE.md: Comprehensive usage examples
- PROJECT_STATUS.md: Current project state

## Project Cleanup
- Removed 8 redundant test files and scripts
- Organized scripts into dedicated directory
- Consolidated functionality into single Python tool
- Added .gitignore entries for generated outputs

## Results
- 100% extraction success on 38 production JCL files
- Identified 41 unique jobs, 18 programs, 61 datasets
- Parser handles complex real-world JCL constructs
- Production-ready for JCL analysis and migration

The parser now provides robust extraction of core JCL elements while maintaining a clean, minimal codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ CLAUDE.md.local
 .claude/
 *.claude-session
 *.claude-temp
+
+# Generated output files
+ast_output/
+jcl_extraction_results.json
+jcl_extraction_summary.csv
+*.ast
